--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>potaufeu</groupId>
   <artifactId>potaufeu</artifactId>
-  <version>1.0.0-beta1</version>
+  <version>1.0.0-beta2-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
