--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
 
-version  = '1.0.0-RC4'
+version  = '1.0.0'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
